2025 index and schedule preliminary

--- a/schedule.html
+++ b/schedule.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>2022 ICPC Asia-Manila Programming Contest</title>
+    <title>2025 ICPC Asia-Manila Programming Contest</title>
     <link rel="stylesheet" href="./main.css" media="all">
     <link rel="stylesheet" href="./css/schedule.css" media="all">
     <script src="https://kit.fontawesome.com/862f24a7ca.js" crossorigin="anonymous"></script>
@@ -25,6 +25,7 @@
       <ul>
         <li id="home-link"><a href="./index.html">Home</a></li>
         <li><a href="./schedule.html">Schedule of Activities</a></li>
+<!--
         <li><a href="./registration.html">Registration</a></li>
         <li><a href="./sizing.html">Shirt Sizing</a></li>
         <li><a href="./accommodations.html">Accommodations</a></li>
@@ -33,6 +34,7 @@
         <li><a href="./about.html">About</a></li>
         <li><a href="./downloads.html">Downloads</a></li>
         <li><a href="./archive/2022/scoreboard">Scoreboard</a></li>
+-->
       </ul>
     </nav>
     <main>
@@ -52,12 +54,13 @@
       </section>
       <section class="dates-selector">
         <ul>
-          <li><a class="active" href="#saturday">Wednesday, 14 December 2022</a></li>
-          <li><a href="#sunday">Thursday, 15 December 2022</a></li>
+          <li><a class="active" href="#saturday">Tuesday, 09 December 2025</a></li>
+          <li><a href="#sunday">Wednesday, 10 December 2025</a></li>
         </ul>
       </section>
       <section class="calendar">
         <h2>Event Schedule</h2>
+		<h4>Tuesday, 09 December 2025</h4>
         <table class="target" id="saturday">
           <thead>
             <tr>
@@ -72,25 +75,25 @@
               <td>11:00 AM</td>
               <td>1:30 AM</td>
               <td>Registration and Lunch</td>
-              <td>2F Gonzaga Hall</td>
+              <td>Leong Hall Roofd Deck</td>
             </tr>
             <tr>
               <td>1:30 PM</td>
               <td>3:00 PM</td>
               <td>Opening Ceremony</td>
-              <td>Escaler Hall</td>
+              <td>Leong Hall Auditorium</td>
             </tr>
             <tr>
               <td>3:00 PM</td>
               <td>3:30 PM</td>
               <td>Afternoon Snack</td>
-              <td>SEC A Foyer</td>
+              <td>Leong Hall Foyer</td>
             </tr>
             <tr>
               <td>3:30 PM</td>
               <td>5:00 PM</td>
               <td>Practice Session</td>
-              <td>5F Rizal Library</td>
+              <td>The Loft, Areté</td>
             </tr>
             <tr>
               <td colspan="2">5:00 PM</td>
@@ -98,6 +101,7 @@
             </tr>
           </tbody>
         </table>
+		<h4>Wednesday, 10 December 2025</h4>
         <table id="sunday">
           <thead>
             <tr>
@@ -112,37 +116,37 @@
               <td>7:30 AM</td>
               <td>9:30 AM</td>
               <td>Registration and Breakfast</td>
-              <td>2F Gonzaga Hall</td>
+              <td>Leong Hall Roof Deck</td>
             </tr>
             <tr>
               <td>9:30 AM</td>
               <td>10:00 AM</td>
-              <td>Transfer to Rizal Library</td>
-              <td>Coaches: 3F</td>
+              <td>Transfer to The Loft</td>
+              <td>Coaches: Campos Room</td>
             </tr>
             <tr>
               <td>10:00 AM</td>
               <td>3:00 PM</td>
-              <td>2022 ICPC Asia-Manila Regional Contest Proper</td>
-              <td>5F Rizal Library</td>
+              <td>2025 ICPC Asia-Manila Regional Contest Proper</td>
+              <td>The Loft, Areté</td>
             </tr>
             <tr>
               <td>12:00 NN</td>
               <td>1:00 PM</td>
               <td>Lunch</td>
-              <td>5F Rizal Library</td>
+              <td>The Loft, Areté</td>
             </tr>
             <tr>
               <td>4:30 PM</td>
               <td>7:00 PM</td>
               <td>Awarding and Closing Ceremony</td>
-              <td>Escaler Hall</td>
+              <td>Leong Hall Auditorium</td>
             </tr>
             <tr>
               <td>7:00 PM</td>
               <td>8:00 PM</td>
               <td>Closing Dinner</td>
-              <td>MVP Roof Deck</td>
+              <td>Leong Hall Roof Deck</td>
             </tr>
             <tr>
               <td colspan="2">8:00 PM</td>
@@ -151,6 +155,7 @@
           </tbody>
         </table>
       </section>
+<!--
       <section class="calendar">
         <h2>Shuttle Schedule for Microtel-Acropolis</h2>
         <table class="target" id="saturday-travel">
@@ -349,6 +354,7 @@
           </tbody>
         </table>
       </section>
+-->
     </main>
     <footer>
       <div class="footer-content">
