--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <ul>
         <li id="home-link"><a href="./index.html">Home</a></li>
         <li><a href="./schedule.html">Schedule of Activities</a></li>
+<!--
         <li><a href="./registration.html">Registration</a></li>
         <li><a href="./sizing.html">Shirt Sizing</a></li>
         <li><a href="./accommodations.html">Accommodations</a></li>
@@ -33,13 +34,15 @@
         <li><a href="./about.html">About</a></li>
         <li><a href="./downloads.html">Downloads</a></li>
         <li><a href="./archive/2022/scoreboard">Scoreboard</a></li>
+-->
       </ul>
     </nav>
     <main>
       <section class="homepage-banner">
-        <img src="./images/website_banner_2022.png" alt="" id="landscape">
-        <img src="./images/website_mobile.png" alt="" id="portrait">
+        <img src="./images/banner_desktop.png" alt="" id="landscape">
+        <img src="./images/banner_mobile.png" alt="" id="portrait">
       </section>
+<!--
       <section>
         <h2>ICPC Asia-Manila Archives</h2>
         <p>
@@ -49,6 +52,7 @@
         <p><a href="http://penoy.admu.edu.ph/icpcmanila/archive/2017">ICPC Asia-Manila 2017</a></p>
         <p><a href="http://penoy.admu.edu.ph/icpcmanila/archive/2019">ICPC Asia-Manila 2019</a></p>
       </section>
+
       <section>
         <h2>Sponsors</h2>
         <ul class="sponsors-list">
@@ -66,6 +70,7 @@
           </li>
         </ul>
       </section>
+-->
     </main>
     <footer>
       <div class="footer-content">
@@ -82,7 +87,7 @@
         <section>
           <h5>External Links</h5>
           <ul>
-            <li><a href="https://icpcasia.wp.txstate.edu/">ICPC Asia Council Chair Blog</a></li>
+            <li><a href="https://icpc.jp/apac/2025-26/rules/">ICPC Asia Pacific Rules</a></li>
             <li><a href="https://icpc.global/regionals/rules">ICPC Regional Rules</a></li>
             <li><a href="https://icpc.global">ICPC Global</a></li>
           </ul>
