--- a/registration.html
+++ b/registration.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>2022 ICPC Asia-Manila Programming Contest</title>
+    <title>2025 ICPC Asia-Manila Programming Contest</title>
     <link rel="stylesheet" href="./main.css" media="all">
     <script src="https://kit.fontawesome.com/862f24a7ca.js" crossorigin="anonymous"></script>
   </head>
@@ -25,6 +25,7 @@
         <li id="home-link"><a href="./index.html">Home</a></li>
         <li><a href="./schedule.html">Schedule of Activities</a></li>
         <li><a href="./registration.html">Registration</a></li>
+<!--
         <li><a href="./sizing.html">Shirt Sizing</a></li>
         <li><a href="./accommodations.html">Accommodations</a></li>
         <li><a href="./rules.html">Rules</a></li>
@@ -32,6 +33,7 @@
         <li><a href="./about.html">About</a></li>
         <li><a href="./downloads.html">Downloads</a></li>
         <li><a href="./archive/2022/scoreboard">Scoreboard</a></li>
+-->
       </ul>
     </nav>
     <main>
@@ -62,10 +64,9 @@
         <h2>How to Register</h2>
         <ol>
           <li>
-            Register your team on the <a href="https://icpc.global/private/teamRegistration/site/22614">ICPC Web Site</a>.
+            Register your team on the <a href="https://bit.ly/icpcManila25reg">ICPC Web Site</a>.
           </li>
           <li>Pay the registration fee of your team.</li>
-          <li>Send a copy of your payment transaction to <a href="mailto:icpc.discs@ateneo.edu">icpc.discs@ateneo.edu</a>.</li>
           <li>You will receive a confirmation regarding your registration through your ICPC account.</li>
         </ol>
         <p>All contestants, coaches, and guests must be fully vaccinated against COVID-19.</p>
@@ -73,21 +74,21 @@
       <section id="registrationperiod">
         <h2>Registration Period</h2>
         <ul>
-          <li>Registration opens on 22 October 2022</li>
-          <li>Registration closes on 15 November 2022</li>
+          <li>Registration opens on 10 October 2025</li>
+          <li>Registration closes on 10 November 2025</li>
         </ul>
       </section>
       <section id="registrationfee">
         <h2>Registration Fee</h2>
         <ul>
           <li>
-            Foreign teams: USD 200
+            Foreign teams: USD 250
             <ul>
               <li>Each extra person: USD 50</li>
             </ul>
           </li>
           <li>
-            Local (Philippine) teams: PHP 10,000
+            Local (Philippine) teams: PHP 12,000
             <ul>
               <li>Each extra person: PHP 2,500</li>
             </ul>
@@ -117,68 +118,159 @@
       </section>
       <section id="paymentinstructions">
         <h2>Payment Instructions</h2>
-        <ol>
-          <li>Go to the nearest/most convenient bank in your area.</li>
-          <li>
-            <p>
-            For payment in <b><em>US Dollars</em></b>, deposit your
-            payment via wire transfer to:
-            </p>
-            <ul>
-              <h3>Bank of the Philippine Islands [USD]</h3>
-              <li><b>Account Name:&nbsp;</b><span>Ateneo de Manila University, Inc.</span></li>
-              <li><b>Account Address:&nbsp;</b><span>Katipunan Ave., Loyola Heights, Quezon City</span></li>
-              <li><b>Bank Account Number:&nbsp;</b><span>3084-0002-04</span></li>
-              <li><b>Bank Name:&nbsp;</b><span>Bank of the Philippine Islands</span></li>
-              <li><b>Bank Address:&nbsp;</b><span>Bank of the Philippine Islands</span></li>
-              <li><b>SWIFT Code:&nbsp;</b><span>BOPIPHMM</span></li>
-              <li><b>Branch Code:&nbsp;</b><span>308</span></li>
-            </ul>
-
-            <p>
-            You are highly encouraged to pay for the bank transfer fee so
-            that ICPC Asia-Manila organizers receive the exact total amount.
-            </p>
-          </li>
-          <li>
-            <p>For payment in <b><em>Philippine Pesos</em></b>, deposit your payment to:</p>
-            <ul>
-              <h3>Bank of the Philippine Islands [PHP]</h3>
-              <li><b>Account Name:&nbsp;</b><span>Ateneo de Manila University, Inc.</span></li>
-              <li><b>Account Address:&nbsp;</b><span>Katipunan Ave., Loyola Heights, Quezon City</span></li>
-              <li><b>Bank Account Number:&nbsp;</b><span>3081-0006-29</span></li>
-              <li><b>Bank Name:&nbsp;</b><span>Bank of the Philippine Islands</span></li>
-              <li><b>Bank Address:&nbsp;</b><span>Bank of the Philippine Islands</span></li>
-              <li><b>SWIFT Code:&nbsp;</b><span>BOPIPHMM</span></li>
-              <li><b>Branch Code:&nbsp;</b><span>308</span></li>
-            </ul>
-          </li>
-          <li>
-            Make sure to have a copy of the validated transaction document.
-          </li>
-          <li>
-            <p>
-            As soon as payment is made, send a scanned copy of the validated
-            transaction document to <a href="mailto:icpc.discs@ateneo.edu">icpc.discs@ateneo.edu</a>.
-            Please indicate the following when sending the document:
-            </p>
-            <ul>
-              <li>University Name</li>
-              <li>Team Name</li>
-              <li>Names of Team Members</li>
-            </ul>
-          </li>
-          <li>
-            The organizers will receive the bank confirmation after at least three (3) banking days.
-          </li>
-        </ol>
         <p>You will be issued an official receipt during on-site registration</p>
         <p>
         <strong>
           <em>No refund will be made for cancellation of registration for whatever reason</em>
         </strong>
         </p>
+		
+		<h3>For Payment in USD</h3>
+		<h4>Online Payment via Credit Card</h4>
+		<p>This <a href="https://webpay.ateneo.edu/dollar"><strong>online payment facility</strong></a> accepts Visa / MasterCard Debit or Credit Card of any issuing bank.
+		<br /><br />
+		<strong>Please read and follow the instructions below.</strong>
+		</p>
+        <ol>
+          <li>
+            Please provide the following information on the payment form:
+			<ul>
+				<li>Reference Number: 225078004</li>
+				<li>Amount to be Paid (USD 250 per team, plus USD 50 per extra person if any)</li>
+				<li>Payer Name (name to be indicated in the official receipt)</li>
+				<li>Particulars: ICPC Manila 2025 Registration</li>
+				<li>Nominated E-Mail Address (your email address where the payment confirmation will be sent)</li>
+			</ul>
+          </li>
+		  <li>
+		    Select the preferred payment method.
+		  </li>
+		  <li>
+		    Enter the card details.
+			<ul>
+				<li>Card Number</li>
+				<li>Expiry Date (month and year)</li>
+				<li>Security Code / CVV (3 digits at the end of the signature panel of your card)</li>
+			</ul>
+		  </li>
+		  <li>
+			Wait for the payment to be processed. Confirmation will be sent to your nominated e-mail address.
+		  </li>
+          <li>
+            The organizers will receive the bank confirmation after at least three (3) banking days.
+          </li>
+        </ol>
+
+		<h4>Payment through Bank Wire Transfer</h4>
+		<strong>Please read and follow the instructions below.</strong>
+		<ol>
+			<li>
+				Go to the nearest/most convenient bank in your area.
+			</li>
+			<li>
+				Deposit your payment in <strong>US Dollars</strong> via wire transfer to: <strong>Bank of the Philippine Islands [USD]</strong>
+				<ul>
+					<li>Account Name: <strong>Ateneo de Manila University, Inc.</strong></li>
+					<li>USD Account Number: <strong>3084-0002-04</strong></li>
+					<li>SWIFT Code: <strong>BOPIPHMM</strong></li>
+					<li>Branch Code: <strong>BR00308</strong></li>
+					<li>Reference / Info / Comment / Note: <strong>225078004</strong></li>
+				</ul>
+			</li>
+			<li>
+				Make sure to have a copy of the validated transaction document.
+			</li>
+			<li>
+				As soon as payment is made, send a scanned copy of the validated transaction document to icpc.discs@ateneo.edu with the following details:
+				<ul>
+					<li>University Name</li>
+					<li>Team Name</li>
+					<li>Names of Team Members</li>
+				</ul>
+			</li>
+			<li>
+				The organizers will receive the bank confirmation after at least three (3) banking days.
+			</li>
+		</ol>
+		
+		
+		<h3>For Payment in PHP</h3>
+		<h4>Online Payment via Credit Card</h4>
+		<p>This <a href="https://webpay.ateneo.edu/peso"><strong>online payment facility</strong></a> accepts Visa / MasterCard Debit or Credit Card of any issuing bank.
+		<br /><br />
+		<strong>Please read and follow the instructions below.</strong>
+		</p>
+        <ol>
+          <li>
+            Please provide the following information on the payment form:
+			<ul>
+				<li>Reference Number: 225078004</li>
+				<li>Amount to be Paid (PHP 12,000 per team, plus PHP 2,500 per extra person if any)</li>
+				<li>Payer Name (name to be indicated in the official receipt)</li>
+				<li>Particulars: ICPC Manila 2025 Registration</li>
+				<li>Nominated E-Mail Address (your email address where the payment confirmation will be sent)</li>
+			</ul>
+          </li>
+		  <li>
+		    Select the preferred payment method.
+		  </li>
+		  <li>
+		    Enter the card details.
+			<ul>
+				<li>Card Number</li>
+				<li>Expiry Date (month and year)</li>
+				<li>Security Code / CVV (3 digits at the end of the signature panel of your card)</li>
+			</ul>
+		  </li>
+		  <li>
+			Wait for the payment to be processed. Confirmation will be sent to your nominated e-mail address.
+		  </li>
+          <li>
+            The organizers will receive the bank confirmation after at least three (3) banking days.
+          </li>
+        </ol>
+		<h4>Payment through Bank Wire Transfer</h4>
+		<strong>Please read and follow the instructions below.</strong>
+		<ol>
+			<li>
+				Go to the nearest/most convenient bank in your area.
+			</li>
+			<li>
+				Deposit your payment in <strong>Philippine Pesos</strong> via wire transfer to: <strong>Bank of the Philippine Islands [PHP]</strong>
+				<ul>
+					<li>Account Name: <strong>Ateneo de Manila University, Inc.</strong></li>
+					<li>Account Address: <strong>Katipunan Ave., Loyola Heights, Quezon City</strong></li>
+					<li>Bank Account Number: <strong>3081-0006-29</strong></li>
+					<li>Bank Name: <strong>Bank of the Philippine Islands</strong></li>
+					<li>Bank Address: <strong>Katipunan Ave., Loyola Heights, Quezon City</strong></li>
+					<li>SWIFT Code: <strong>BOPIPHMM</strong></li>
+					<li>Branch Code: <strong>308</strong></li>
+				</ul>
+			</li>
+			<li>
+				Make sure to have a copy of the validated transaction document.
+			</li>
+			<li>
+				As soon as payment is made, send a scanned copy of the validated transaction document to icpc.discs@ateneo.edu with the following details:
+				<ul>
+					<li>University Name</li>
+					<li>Team Name</li>
+					<li>Names of Team Members</li>
+				</ul>
+			</li>
+			<li>
+				The organizers will receive the bank confirmation after at least three (3) banking days.
+			</li>
+		</ol>
+        <p>You will be issued an official receipt during on-site registration</p>
+        <p>
+        <strong>
+          <em>No refund will be made for cancellation of registration for whatever reason</em>
+        </strong>
+        </p>
+
       </section>
+
       <section id="basicrequirements">
         <h2>Basic Requirements & Rules</h2>
         <p>
