updated footer links

--- a/registration.html
+++ b/registration.html
@@ -293,7 +293,7 @@
         <section>
           <h5>External Links</h5>
           <ul>
-            <li><a href="https://icpcasia.wp.txstate.edu/">ICPC Asia Council Chair Blog</a></li>
+            <li><a href="https://icpc.jp/apac/2025-26/rules/">ICPC Asia Pacific Rules</a></li>
             <li><a href="https://icpc.global/regionals/rules">ICPC Regional Rules</a></li>
             <li><a href="https://icpc.global">ICPC Global</a></li>
           </ul>
