--- a/schedule.html
+++ b/schedule.html
@@ -369,9 +369,9 @@
         <section>
           <h5>External Links</h5>
           <ul>
-            <li><a href="http://blog.sina.com.cn/cjhwang">ICPC Asia Director's Blog</a></li>
-            <li><a href="https://icpc.baylor.edu/regionals/rules">ICPC Regional Rules</a></li>
-            <li><a href="https://icpc.baylor.edu/">ICPC Headquarters Page</a></li>
+            <li><a href="https://icpc.jp/apac/2025-26/rules/">ICPC Asia Pacific Rules</a></li>
+            <li><a href="https://icpc.global/regionals/rules">ICPC Regional Rules</a></li>
+            <li><a href="https://icpc.global">ICPC Global</a></li>
           </ul>
         </section>
         <section class="footer_logos">
